my-app/src/app/globals.css
@import "tailwindcss";

:root {
  --background: #000000;
  --foreground: #ffffff;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #ffffff;
    --foreground: #000000;
  }
}

.svg-inline--fa {
  display: inline-block;
  height: 1em;
  vertical-align: -0.125em;

}

body {
  background-color:whitesmoke;
  display: flex;
  justify-content: center;
  margin: 0px;
  font-family: Arial, Helvetica, sans-serif;
}

.app {
  width: 390px;
  background-color: white;
  min-height: 100vh;
}

.title {
  display: flex;
  justify-content: space-between;
  align-items: first baseline;
  gap: 10px;
  border-bottom: 1px solid #e5e5e5;
  padding-top: 2px;
  padding-left: 10px;
  padding-right: 10px;
}

.title h1 {
  font-size: x-large; 
  font-weight: bold;
  margin: 10px;
  text-shadow: 2px 2px 4px rgba(0,0,0,0.21);
}

.input-search-bar {
  padding: 6px 10px 3px;
  margin: 1px 5px 1px 1px;
  display: flex;
  align-items: center;
  border-style: solid;
  border: 1px solid #d6d6d6;
  font-size: 13px;
  border-radius: 50px;
  background-color: #f3f3f3;
  box-shadow: 0 0 10px -7px rgba(0, 0, 0, 0.8);
}

.search-logo {
  color: #666;
  margin: 2px;
}

.buttons-on-top {
  margin: 2px;
  padding: 5px;
  display: flex;
}

.story-row {
  border-bottom: 1px solid #e5e5e5;
  margin: 14px;
  padding: 0 12 1px;
  gap: 10px;
}

.stories {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.individual-pfp {
  width: 60px;
  height: 60px;
  object-fit: cover;
  border-radius: 500px;
  padding: 2px;
  border: 1px solid #d8d8d8;
  box-shadow: 0 0 10px -7px rgba(0, 0, 0, 0.8);
}

.individual-nametag p {
  margin: 3px 0 0;
  font-size: 14px;
}

.post {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0 24px;
}

.posting-header {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  padding: 8px 0px;
  font-size: 12px;
}

.posting-header p {
  color: #666;
  font-weight: 700;
}

.posting-header .user-poster {
  width: 25px;
  height: 25px;
  margin: 5px;
  padding: 1px;
  border: 1px solid rgb(253, 0, 0);
  box-shadow: 0 0 10px -7px red;
}

.poster-ig-name {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 2px;
}

.poster-ig-name p {
  margin: 0;
}

.poster-date {
  display: flex;
}

/* Main post image */
.posted-image {
  width: 100%;
  height: 350px;
  box-shadow: 8px 5px 15px 0px rgba(0, 0, 0, 0.08);
  border-radius: 8px;
  object-fit: cover;
}

/* Post action buttons */
.buttons {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 8px 5px;
  gap: 5px;
}

.left-buttons {
  display: flex;
  gap: 12px;
}

.heart-liked {
  color: red;
  filter: drop-shadow(0 0 5px red);
}

.heart-unliked {
  color: black;
}

.comment-nodisplay {
  color: red;
  filter: drop-shadow(0 0 5px red);
}

.comment-display {
  color: black;
}

.saved-yes {
  color: blue;
  filter: drop-shadow(0 0 5px blue);
}

.saved-no {
  color: black;
}

.save-button {
  display: flex;
}

/* Liked By Bar */
.liked-by-section {
  font-size: 12px;
  font-weight: 400;
  margin: 0px;
  display: flex;
  align-items: center;
  flex-direction: row;
  padding: auto;
}

.liked-by-image {
  padding-right: 5px;
}

.liked-by-poster {
  width: 25px;
  height: 25px;
  border-radius: 50%;
  object-fit: cover;
  padding: 1px;
  border: 1px solid rgb(253, 0, 0);
  box-shadow: 0 0 10px -7px red;
}

.liked-by-container {
  display: flex;
  align-items: center;
  gap: 4px
}

.liked-by p {
  color: gray;
}

.liked-by-username p {
  color: black;
  font-weight: bold;
}

.liked-by-number p {
  color: black;
  font-weight: bold;
}

/* Post caption row */
.poster-row {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
}

.poster-username-comment {
  display: flex;
  align-items: flex-start;
  margin: 0 2 5px;
}

.poster-username-comment p {
  margin: 0px
}

.commentator {
  font-size: 2px;
}

.doge-name p {
  color: black;
  font-weight: bold;
}

.doge-comment {
  color: gray;
  font-weight: 500;
}

/* Caption wrapper */
.poster-ig-name {
  display: flex;
  flex-direction: column;
  margin: 0px;
}

/* Caption text spacing */
.poster p {
  margin: 2px;
  font-weight: bold;
  font-size: 14px;
  font-weight: 700;
}

/* Poster avatar */
.user-poster {
  width: 30px;
  height: 30px;
  object-fit:cover;
  border-radius: 500px;
  padding: 2px;
  border: 1px solid #d8d8d8;
  box-shadow: 0 0 10px -7px rgba(0, 0, 0, 0.8);
}

/* Poster name */
.poster-name {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
}

.poster-ig-username p {
  font-weight: bold;
  color: black;
}

.poster-location p {
  font-weight: 400;
}

/* Comment section */
.comment-section-bundle {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  padding-bottom: 2px;
  padding-left: 5px;
  padding-right: 5px;
  margin-top: 5px;
  border-top: 1px solid #eeeeee;
  background-color:  white;
}

/* Comment section title */
.comment-header h2 {
  margin: 2px 0px 3px;
  font-size: 20px;
  font-weight: bold;
}

/* Individual comment row */
.comment {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  gap: 2px;
  margin: 0px;
  padding: 1px;
  font-size: 10px;
}

.individual-comment {
  display: flex;
  align-items: center;
  flex-direction: row;
  gap: 1px;
  padding: 2px;
  font-size: 12px;
}

.commentator p {
  margin: 2px;
  font-size: 12px
}

.poster-name p {
  font-weight: bold;
}

/* Comment avatar */
.comment-image {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  object-fit: cover;
}

/* Add-comment button */
.add-comment {
  display: flex;
  flex-direction: row;
  align-items: center;
  text-align: center;
  padding-left: 50px;
  padding-right: 10px;
  margin-top: 2px;
  margin-left: 0;
  color: black;
  border: 1px solid #d6d6d6;
  background-color: white;
  background-color: #f3f3f3;
  border-radius: 30px;
  box-shadow: 0 0 10px -7px rgba(0, 0, 0, 0.8);
}

.add-comment p {
  margin: 10px;
  font-size: 12px;
}

